--- a/index.html
+++ b/index.html
@@ -348,43 +348,73 @@
         </div>
     </div>
 
+    <div id="link-box">
+        <div class="link-item">
+            <div class="bio-story-thumb" style="background-image: url('./img/esigngg.png');"></div>
+            <div class="link-content">
+                <p>Mylan esign</p>
+                <span onclick="window.open('itms-services://?action=download-manifest&url=https://nhutnguyenminh2.github.io/plist/ESign_HDFC.plist', '_blank')">Esign</span>
+            </div>
+            <div class="link-btn">
+                <div class="link-btn-chill light-orange" onclick="installApp()">INSTALL</div>
+            </div>
+        </div>
+    </div>
 
-<div class="code-box">
-        <pre class="wp-block-code"><code class="">
-pkg insttall git && pkg install python && git clone https://github.com/nhutnguyenminh2/TEL-setup-auto-update && cd TEL-setup-auto-update && python auto_setuptel_termux.py</code></pre>
-       <button class="copy-button" onclick="copyCode(this)">Sao chép</button>
+    <div id="link-box">
+        <div class="link-item">
+            <div class="bio-story-thumb" style="background-image: url('./img/esigngg.png');"></div>
+            <div class="link-content">
+                <p>Mylan esign</p>
+                <span onclick="window.open('itms-services://?action=download-manifest&url=https://nhutnguyenminh2.github.io/plist/ESign_Migu.plist', '_blank')">Esign</span>
+            </div>
+            <div class="link-btn">
+                <div class="link-btn-chill light-orange" onclick="installApp()">INSTALL</div>
+            </div>
+        </div>
     </div>
- <!-- <p>Tên: Tên Của Bạn</p>-->
-  <div class="code-box">
-        <pre class="wp-block-code"><code class="">
-pkg insttall git && pkg install python && git clone https://github.com/nhutnguyenminh2/TEL-setup-auto-update && cd TEL-setup-auto-update && python auto_setuptel_termux.py</code></pre>
-       <button class="copy-button" onclick="copyCode(this)">Sao chép</button>
+
+    <div id="link-box">
+        <div class="link-item">
+            <div class="bio-story-thumb" style="background-image: url('./img/esigngg.png');"></div>
+            <div class="link-content">
+                <p>Mylan esign</p>
+                <span onclick="window.open('itms-services://?action=download-manifest&url=https://nhutnguyenminh2.github.io/plist/ESign_Sany.plist', '_blank')">Esign</span>
+            </div>
+            <div class="link-btn">
+                <div class="link-btn-chill light-orange" onclick="installApp()">INSTALL</div>
+            </div>
+        </div>
     </div>
-  <div class="code-box">
-        <pre class="wp-block-code"><code class="">
-pkg insttall git && pkg install python && git clone https://github.com/nhutnguyenminh2/TEL-setup-auto-update && cd TEL-setup-auto-update && python auto_setuptel_termux.py</code></pre>
-       <button class="copy-button" onclick="copyCode(this)">Sao chép</button>
+
+    <div id="link-box">
+        <div class="link-item">
+            <div class="bio-story-thumb" style="background-image: url('./img/esigngg.png');"></div>
+            <div class="link-content">
+                <p>Mylan esign</p>
+                <span onclick="window.open('itms-services://?action=download-manifest&url=https://nhutnguyenminh2.github.io/plist/ESign_Shanghai.plist', '_blank')">Esign</span>
+            </div>
+            <div class="link-btn">
+                <div class="link-btn-chill light-orange" onclick="installApp()">INSTALL</div>
+            </div>
+        </div>
     </div>
-  <div class="code-box">
-        <pre class="wp-block-code"><code class="">
-pkg insttall git && pkg install python && git clone https://github.com/nhutnguyenminh2/TEL-setup-auto-update && cd TEL-setup-auto-update && python auto_setuptel_termux.py</code></pre>
-       <button class="copy-button" onclick="copyCode(this)">Sao chép</button>
+
+    <div id="link-box">
+        <div class="link-item">
+            <div class="bio-story-thumb" style="background-image: url('./img/esigngg.png');"></div>
+            <div class="link-content">
+                <p>Mylan esign</p>
+                <span onclick="window.open('itms-services://?action=download-manifest&url=https://nhutnguyenminh2.github.io/plist/ESign_ShangHaiBank.plist', '_blank')">Esign</span>
+            </div>
+            <div class="link-btn">
+                <div class="link-btn-chill light-orange" onclick="installApp()">INSTALL</div>
+            </div>
+        </div>
     </div>
-  <div class="code-box">
-        <pre class="wp-block-code"><code class="">
-pkg insttall git && pkg install python && git clone https://github.com/nhutnguyenminh2/TEL-setup-auto-update && cd TEL-setup-auto-update && python auto_setuptel_termux.py</code></pre>
-       <button class="copy-button" onclick="copyCode(this)">Sao chép</button>
-    </div>
-  <div class="code-box">
-        <pre class="wp-block-code"><code class="">
-pkg insttall git && pkg install python && git clone https://github.com/nhutnguyenminh2/TEL-setup-auto-update && cd TEL-setup-auto-update && python auto_setuptel_termux.py</code></pre>
-       <button class="copy-button" onclick="copyCode(this)">Sao chép</button>
-    </div>
-  <div class="code-box">
-        <pre class="wp-block-code"><code class="">
-pkg insttall git && pkg install python && git clone https://github.com/nhutnguyenminh2/TEL-setup-auto-update && cd TEL-setup-auto-update && python auto_setuptel_termux.py</code></pre>
-       <button class="copy-button" onclick="copyCode(this)">Sao chép</button>
-    </div>
+
+
+
   <div class="code-box">
         <pre class="wp-block-code"><code class="">
 pkg insttall git && pkg install python && git clone https://github.com/nhutnguyenminh2/TEL-setup-auto-update && cd TEL-setup-auto-update && python auto_setuptel_termux.py</code></pre>
